Création des fonctions pour le Ticket et Ajout dans swagger
